# MQTTStreamingModule

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  opendaq_ref
.github/workflows/: ci-downstream.yml  ci.yml
cmake/: CMakeLists.txt
examples/: CMakeLists.txt  InputArgs.h
examples/custom-mqtt-sub/: CMakeLists.txt  pub-config.json
examples/custom-mqtt-sub/src/: CMakeLists.txt  custom-mqtt-sub.cpp
examples/raw-mqtt-sub/: CMakeLists.txt
examples/raw-mqtt-sub/src/: CMakeLists.txt  raw-mqtt-sub.cpp
examples/ref-dev-mqtt-fb-pub/: CMakeLists.txt
examples/ref-dev-mqtt-fb-pub/src/: CMakeLists.txt
examples/ref-dev-mqtt-pub/: CMakeLists.txt
examples/ref-dev-mqtt-pub/src/: CMakeLists.txt  ref-dev-mqtt-pub.cpp
examples/ref-dev-mqtt-raw-sub/: CMakeLists.txt
examples/ref-dev-mqtt-sub/: CMakeLists.txt
modules/: CMakeLists.txt
modules/mqtt_streaming_module/: CMakeLists.txt
modules/mqtt_streaming_module/include/mqtt_streaming_module/: atomic_signal_atomic_sample_handler.h  atomic_signal_sample_arr_handler.h  common.h  constants.h  group_signal_shared_ts_handler.h  handler_base.h  handler_factory.h  helper.h  mqtt_client_fb_impl.h  mqtt_json_decoder_fb_impl.h  mqtt_publisher_fb_impl.h  mqtt_streaming_module_impl.h  mqtt_subscriber_fb_impl.h  property_helper.h  raw_handler.h  signal_arr_atomic_sample_handler.h  status_adaptor.h  status_container.h  status_helper.h  types.h
modules/mqtt_streaming_module/src/: CMakeLists.txt  atomic_signal_atomic_sample_handler.cpp  atomic_signal_sample_arr_handler.cpp  group_signal_shared_ts_arr_handler.cpp  group_signal_shared_ts_handler.cpp  module_dll.cpp  mqtt_client_fb_impl.cpp  mqtt_json_decoder_fb_impl.cpp  mqtt_publisher_fb_impl.cpp  mqtt_streaming_module_impl.cpp  mqtt_subscriber_fb_impl.cpp  raw_handler.cpp  signal_arr_atomic_sample_handler.cpp
modules/mqtt_streaming_module/tests/: CMakeLists.txt  test_data.h  test_mqtt_client_fb.cpp  test_mqtt_json_decoder_fb.cpp  test_mqtt_publisher_fb.cpp  test_mqtt_subscriber_fb.cpp
modules/mqtt_streaming_module/tests/data/: public-example1.json  public-example2.json  public-example3.json
mqtt_streaming_client_module/: CMakeLists.txt
mqtt_streaming_client_module/include/mqtt_streaming_client_module/: common.h  constants.h  handler_base.h  handler_factory.h  helper.h  module_dll.h  mqtt_base_fb.h  mqtt_json_receiver_fb_impl.h  mqtt_publisher_fb_impl.h  mqtt_raw_receiver_fb_impl.h  mqtt_receiver_fb_impl.h  mqtt_streaming_client_module_impl.h  mqtt_streaming_device_impl.h  multiple_handler.h  multiple_shared_handler.h  multisingle_handler.h  single_handler.h  types.h
mqtt_streaming_client_module/src/: CMakeLists.txt  helper.cpp  module_dll.cpp  mqtt_base_fb.cpp  mqtt_json_receiver_fb_impl.cpp  mqtt_publisher_fb_impl.cpp  mqtt_raw_receiver_fb_impl.cpp  mqtt_receiver_fb_impl.cpp  mqtt_streaming_client_module_impl.cpp  mqtt_streaming_device_impl.cpp  multiple_handler.cpp  multiple_shared_handler.cpp  multisingle_handler.cpp  single_handler.cpp
mqtt_streaming_client_module/tests/: CMakeLists.txt  test_daq_test_helper.h  test_data.h  test_mqtt_device.cpp  test_mqtt_json_fb.cpp  test_mqtt_publisher_fb.cpp  test_mqtt_raw_fb.cpp  test_mqtt_streaming_client_module.cpp
mqtt_streaming_module/: CMakeLists.txt
mqtt_streaming_module/include/mqtt_streaming_module/: atomic_signal_atomic_sample_handler.h  atomic_signal_sample_arr_handler.h  common.h  constants.h  group_signal_shared_ts_arr_handler.h  group_signal_shared_ts_handler.h  handler_base.h  handler_factory.h  helper.h  module_dll.h  mqtt_base_fb.h  mqtt_client_fb_impl.h  mqtt_json_decoder_fb_impl.h  mqtt_json_receiver_fb_impl.h  mqtt_publisher_fb_impl.h  mqtt_raw_receiver_fb_impl.h  mqtt_root_fb_impl.h  mqtt_streaming_device_impl.h  mqtt_streaming_module_impl.h  mqtt_subscriber_fb_impl.h  multiple_handler.h  multiple_shared_handler.h  multisingle_handler.h  signal_arr_atomic_sample_handler.h  single_handler.h  status_helper.h  types.h
mqtt_streaming_module/src/: CMakeLists.txt  atomic_signal_atomic_sample_handler.cpp  atomic_signal_sample_arr_handler.cpp  group_signal_shared_ts_arr_handler.cpp  group_signal_shared_ts_handler.cpp  helper.cpp  mqtt_base_fb.cpp  mqtt_client_fb_impl.cpp  mqtt_json_decoder_fb_impl.cpp  mqtt_json_receiver_fb_impl.cpp  mqtt_publisher_fb_impl.cpp  mqtt_raw_receiver_fb_impl.cpp  mqtt_root_fb_impl.cpp  mqtt_streaming_device_impl.cpp  mqtt_streaming_module_impl.cpp  mqtt_subscriber_fb_impl.cpp  multiple_handler.cpp  multiple_shared_handler.cpp  multisingle_handler.cpp  signal_arr_atomic_sample_handler.cpp  single_handler.cpp
mqtt_streaming_module/tests/: CMakeLists.txt  test_daq_test_helper.h  test_data.h  test_mqtt_device.cpp  test_mqtt_json_decoder_fb.cpp  test_mqtt_json_fb.cpp  test_mqtt_publisher_fb.cpp  test_mqtt_raw_fb.cpp  test_mqtt_root_fb.cpp  test_mqtt_streaming_module.cpp  test_mqtt_subscriber_fb.cpp
mqtt_streaming_module/tests/data/: public-example0.json
mqtt_streaming_protocol/: CMakeLists.txt
mqtt_streaming_protocol/include/: IMqttBase.h  IMqttPublisher.h  IMqttSubscriber.h  MQTTClientType.h  MqttAsyncClient.h  MqttAsyncPublisher.h  MqttAsyncSubscriber.h  MqttDataWrapper.h  MqttMessage.h  timestampConverter.h
mqtt_streaming_protocol/src/: CMakeLists.txt  MqttAsyncClient.cpp  MqttAsyncPublisher.cpp  MqttAsyncSubscriber.cpp  MqttDataWrapper.cpp
mqtt_streaming_protocol/tests/: CMakeLists.txt  MqttAsyncClientWrapper.cpp  MqttAsyncClientWrapper.h  Timer.h  test_mqtt_streaming_protocol.cpp
mqtt_streaming_server_module/: CMakeLists.txt
mqtt_streaming_server_module/include/mqtt_streaming_server_module/: common.h  constants.h  module_dll.h  mqtt_streaming_server_impl.h  mqtt_streaming_server_module_impl.h
mqtt_streaming_server_module/src/: CMakeLists.txt  module_dll.cpp  mqtt_streaming_server.natvis  mqtt_streaming_server_impl.cpp  mqtt_streaming_server_module_impl.cpp
mqtt_streaming_server_module/tests/: CMakeLists.txt  test_mqtt_streaming_server_module.cpp
shared/: CMakeLists.txt
shared/helper_utils/: CMakeLists.txt
shared/mqtt_streaming_protocol/: CMakeLists.txt
(+23 files in other folders)
