cmake_minimum_required(VERSION 3.10)
set_cmake_folder_context(TARGET_FOLDER_NAME)

set(MQTT_SERVER_MODULE_VERSION ${OPENDAQ_PACKAGE_VERSION})
set(MQTT_SERVER_MODULE_PRJ_NAME "OpenDaqMqttServerModule")

message(STATUS "${MQTT_SERVER_MODULE_PRJ_NAME} version: ${MQTT_SERVER_MODULE_VERSION}")
project(${MQTT_SERVER_MODULE_PRJ_NAME} VERSION ${MQTT_SERVER_MODULE_VERSION} LANGUAGES C CXX)

add_subdirectory(src)
